<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.student42.mathieu.ft_hangouts.CreateUser"
    tools:showIn="@layout/activity_create_user">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp" >

                    <TextView
                        style="@style/CustomText"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:text="@string/create_user_name" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:singleLine="true"
                        android:id="@+id/create_user_name"
                        android:hint="@string/create_user_name"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp" >

                    <TextView
                        style="@style/CustomText"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:text="@string/create_user_fname" />

                    <EditText
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:layout_height="fill_parent"
                        android:id="@+id/create_user_fname"
                        android:hint="@string/create_user_fname"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp" >

                    <TextView
                        style="@style/CustomText"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:text="@string/create_user_phone"/>

                    <EditText
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:layout_height="fill_parent"
                        android:id="@+id/create_user_phone"
                        android:hint="@string/create_user_phone"
                        android:layout_weight="1"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp" >

                    <TextView
                        style="@style/CustomText"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        android:text="@string/create_user_email"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:singleLine="true"
                        android:id="@+id/create_user_email"
                        android:hint="@string/create_user_email"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dp"
                        style="@style/CustomText"
                        android:text="@string/create_user_home"/>

                    <EditText
                        android:singleLine="true"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:id="@+id/create_user_home"
                        android:hint="@string/create_user_home"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="1">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_user_create"
                android:onClick="CreateNewUser"
                android:id="@+id/create_user_create"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_user_cancel"
                android:id="@+id/create_user_cancel"
                android:onClick="cancelCreateUser"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
